feat(gateway): implement 100% API-driven Docente Switcher and dynamic course catalog